--- a/overwatch.css
+++ b/overwatch.css
@@ -91,7 +91,8 @@ video{
   grid-area: heroes;
   display: grid;
   grid-template-columns: 241px 213px 206px 177px;
-  padding-left: 75px;
+  /* margin: auto;   */
+  padding-left: 230px;
   grid-column-gap: 32px;
 }
 
